@@ -11,7 +11,7 @@
 ; ------------------------------------------------------------------
 ; General settings for how ComicRack runs
 
-; Uncomment if you want to keep database/settings and cache local
+; Uncomment if you want to keep database/settings and cache local (same as -local command switch)
 ; UseLocalSettings = true
 
 ; Path to the Database (same as -db command switch)
@@ -112,6 +112,9 @@
 
 ; Set to false to disable sorting of network folders in the folder browser
 ; SortNetworkFolders = true
+
+; Disable the reading & writing of ComicInfo in NTFS alternative stream. (same as -ntfs command switch)
+; DisableNTFS = false
 
 ; ------------------------------------------------------------------
 ; Quicklist Settings
